--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <p>Duration: <span id="snippet-duration">3</span>s</p>
         </div>
         <div class="game-area">
+            <center><img id="album-art" src="./imga.png" alt="Album Art" style="width:200px; height:200px;"></center>
             <button id="play-button">Play</button>
             <button id="skip-button">Skip (+2s)</button>
             <div class="guess-section">
