--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <div class="container">
         <h1>Melody Guessing Game</h1>
         <div class="status-bar">
-            <p>Score: <span id="score">0</span></p>
-            <p>Round: <span id="round">1</span></p>
-            <p>Skips: <span id="skips-used">0</span>/3</p>
-            <p>Duration: <span id="snippet-duration">3</span>s</p>
+            <p>| Score: <span id="score">0 |</span></p>
+            <p>Round: <span id="round">1</span> |</p>
+            <p>Skips: <span id="skips-used">0</span>/3 |</p>
+            <p>Duration: <span id="snippet-duration">3</span>s |</p>
+            <p>Total Rounds: <span id="total-rounds">5</span> |</p>
         </div>
         <div class="game-area">
             <center><img id="album-art" src="./imga.png" alt="Album Art" style="width:200px; height:200px;"></center>
